--- a/demo1/src/main/resources/application.properties
+++ b/demo1/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.application.name=demo1
 server.port=8081
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test1?useSSL=false&serverTimezone=UTC
+
+spring.datasource.url=jdbc:mysql://10.1.50.101:3306/test1?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123
-spring.jpa.show-sql:true
-spring.jpa.format-sql:true
+spring.datasource.password=kingtang
+
+#spring.datasource.hikari.jdbc-url=jdbc:mysql://10.1.50.101:3306/test1?useSSL=false&serverTimezone=UTC
+#spring.datasource.hikari.username=root
+#spring.datasource.hikari.password=kingtang
+
+#spring.jpa.show-sql:true
+#spring.jpa.format-sql:true
 spring.cloud.alibaba.seata.txServiceGroup=my_test_tx_group
 logging.level.org.springframework.cloud.alibaba.seata.web=debug
 logging.level.io.seata=debug
